--- a/index.html
+++ b/index.html
@@ -46,19 +46,21 @@
 
     <main class="Sobre-mim">
         <section id="Sobre">
-            <img src="./img/akira.png" alt="Renan">
+            <img src="./img/akira.png" alt="Renan" id="portrait2">
 
-            <article>
-                <h2>SOBRE MIM</h2>
-                <p>
+            <article id="Sobre-artigo">
+                <h2 id="Sobre-titulo">SOBRE MIM</h2>
+                <p id="Sobre-p">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores eveniet velit modi voluptatem nisi
                     beatae ut fugiat, provident libero qui quam architecto pariatur, impedit, eos adipisci. Eius labore
                     consectetur quam?
                 </p>
-                <p>
+                <p id="Sobre-p">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores eveniet velit modi voluptatem nisi
                     beatae ut fugiat, provident libero qui quam architecto pariatur, impedit, eos adipisci. Eius labore
                     consectetur quam?
+                    <br>
+                    <button id="Sobre-btn">VAMOS COMEÇAR</button>
                 </p>
             </article>
         </section>
