--- a/index.html
+++ b/index.html
@@ -65,6 +65,50 @@
             </article>
         </section>
     </main>
+
+    <main class="Servicos" id="Servicos">
+        <div id="Servicos-descricao">
+            <h1>SERVIÇOS</h1>
+            <p>
+                Interessado em trabalhar comigo? Aqui estão os serviços que eu posso lhe oferecer:
+            </p>
+        </div>
+
+        <div id="Conteudos">
+            <section>
+                <h2>CRIAÇÃO DO SITE</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, commodi distinctio aliquid cumque
+                    impedit
+                    hic ratione placeat excepturi mollitia assumenda obcaecati deserunt praesentium velit soluta sed
+                    amet
+                    nesciunt in earum?
+                </p>
+
+                <button class="btn-servicos">CONTRATAR</button>
+            </section>
+            <section>
+                <h2>FOLDER PROMOCIONAL</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, commodi distinctio aliquid cumque
+                    impedit
+                    hic ratione placeat excepturi mollitia assumenda obcaecati deserunt praesentium velit soluta sed
+                    amet
+                    nesciunt in earum?
+                </p>
+                <button class="btn-servicos">CONTRATAR</button>
+            </section>
+            <section>
+                <h2>IDENTIDADE VISUAL</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, commodi distinctio aliquid cumque impedit
+                    hic ratione placeat excepturi mollitia assumenda obcaecati deserunt praesentium velit soluta sed amet
+                    nesciunt in earum?
+                </p>
+                <button class="btn-servicos">CONTRATAR</button>
+            </section>
+        </div>
+    </main>
 </body>
 
 </html>
